<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="button_dunno">Dunno</string>
    <string name="button_add_question">Add question</string>
    <string name="button_back_to_test">Back to test</string>
    <string name="button_compute">Compute group</string>
    <string name="button_summarise_test">Summarise test</string>
    <string name="button_exit">Exit</string>
    <string name="button_no">No</string>
    <string name="button_qr_code">Scan QR code</string>
    <string name="button_save">Save</string>
    <string name="button_start_test">Go to test</string>
    <string name="button_yes">Yes</string>
    <string name="label_app">Haszowki</string>
    <string name="label_dunno_answers">DUNNO:</string>
    <string name="label_exam_id_value">Test code:</string>
    <string name="label_group_number">Group nr:</string>
    <string name="label_hall_seat">Seat</string>
    <string name="label_hall_row">Row</string>
    <string name="label_info_activity">Information</string>
    <string name="label_studentNo">Student number</string>
    <string name="label_name">Name:</string>
    <string name="label_no_answers">NO:</string>
    <string name="label_null">null</string>
    <string name="label_question_number">Question nr:</string>
    <string name="label_result">Result:</string>
    <string name="label_result_modulo">Group:</string>
    <string name="label_section">Question nr %1$d</string>
    <string name="label_session_token">Session identificator:</string>
    <string name="label_settings_activity">Settings</string>
    <string name="label_course_value">Course name:</string>
    <string name="label_sum_of_answers">Sum of answers saved in test file</string>
    <string name="label_summary_activity">Summary</string>
    <string name="label_surname">Surname:</string>
    <string name="label_version">Version</string>
    <string name="label_weight">Weights vector:</string>
    <string name="label_yes_answers">YES:</string>
    <string name="six_zeros_value">000000</string>
    <string name="version_value">1.0.7</string>
    <string name="zero_value">0</string>
    <string name="message_your_test_file_was_created">Your test file has been created</string>
    <string name="message_you_quit_test">You have left application</string>
    <string name="message_unable_to_send_answer">Unable to send answer!</string>
    <string name="message_type_course_name">Type course name!</string>
    <string name="message_type_row">Type row!</string>
    <string name="message_type_seat">Type seat!</string>
    <string name="message_type_ID_name">Type test code!</string>
    <string name="message_test_ended">Test finished</string>
    <string name="message_scan_qr_code">Scan QR code</string>
    <string name="message_no_internet_connection">No internet connection!</string>
    <string name="message_i_quit_test">Leaving test</string>
    <string name="message_i_quit_app">Leaving application</string>
    <string name="message_give_writing_permission">Give writing permission!</string>
    <string name="message_give_surname">Type surname!</string>
    <string name="message_give_course">Type course name!</string>
    <string name="message_give_proper_student_number">Type proper student number!</string>
    <string name="message_give_proper_vector_number">Type proper test vector!</string>
    <string name="message_give_name">Type name!</string>
    <string name="message_do_you_want_to_quit_test">Do you want to leave the test?</string>
    <string name="message_do_you_want_to_quit_app">Do you want to leave the application?</string>
    <string name="message_data_saved">Data saved</string>
    <string name="message_compute_group">Compute group!</string>
    <string name="button_ok">Ok</string>
    <string name="message_answers_error">To server did not arrive:</string>
    <string name="message_answers_error_title">There was an error with sending answers!</string>
    <string name="message_dunno_answers_error">answers DUNNO - %1$d</string>
    <string name="message_no_answers_error">answers NO - %1$d</string>
    <string name="message_yes_answers_error">answers YES - %1$d</string>
    <string name="message_what_to_do">Go back to test and send missing answers by pressing gray button on corresponding tabs.</string>
    <string name="label_stats">Amount of successfully sent answers</string>
    <string name="message_wrong_qr_button">Wrong QR code!</string>
    <string name="button_finish_test">Finish test</string>
    <string name="message_vector_cant_be_zero">Vector cannot be equal to 0!</string>
    <string name="message_invalid_row">Invalid row!</string>
    <string name="message_invalid_seat">Invalid seat!</string>
    <string name="message_invalid_row_and_seat">Invalid row and seat!</string>
    <string name="message_going_to_test_without_position">You\'re going to test without giving row and seat!</string>
    <string name="label_server_address">Server address:</string>
    <string name="server_address">https://sequoia.ict.pwr.wroc.pl/~witold/</string>
    <string name="button_continue">Continue</string>
    <string name="button_try_again">Try again</string>
    <string name="label_attention">Attention</string>
    <string name="message_invalid_app_version">Invalid app version %1$s! Required version at least %2$s and not higher than %3$s!</string>
    <string name="message_missing_key">Invalid configuration! Missing key for test!</string>
    <string name="message_missing_max_version">Invalid configuration! Missing maximal acceptable app version!</string>
    <string name="message_missing_min_version">Invalid configuration! Missing minimal acceptable app version!</string>
    <string name="message_something_went_wrong_end_test">Something went wrong… Test will be ended. Continue it on paper!</string>
    <string name="message_wrong_key_abort_test">Key for test is invalid! Verify test ID or continue test on paper!</string>
    <string name="button_abort">Abort</string>
    <string name="label_quality_check">Connection quality test</string>
    <string name="label_initialization">Test initialization</string>
    <string name="label_validation">App validation</string>
    <string name="message_url_not_safe">You\'ve typed invalid server URL. Only safe connections are accepted!</string>
    <string name="message_server_not_reachable">Server is unreachable! Check your Internet connection or server address!</string>
    <string name="message_seat_already_taken">Seat is already occupied! Take other seat or check your seat and row!</string>
    <string name="message_nonce_not_downloaded">Nonce has not been downloaded from server! Try again or check server address!</string>
    <string name="message_google_api_unavailable">Connection error with Google servers! Try again!</string>
    <string name="message_connection_or_test_id_error">Internet connection error or invalid test ID!</string>
</resources>