<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".TabsActivity$QuestionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableRow
            android:id="@+id/row_tab_info_labels"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/label_group_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/label_group_number"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/label_question_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/label_question_number"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_tab_info"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_tab_info_labels">

            <TextView
                android:id="@+id/view_group_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:maxLines="1"
                android:minHeight="50sp"
                android:text="@string/zero_value"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/view_question_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:maxLines="1"
                android:minHeight="50dp"
                android:text="@string/zero_value"
                android:textSize="30sp" />

        </TableRow>

        <Button
            android:id="@+id/button_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_tab_info"
            android:text="@string/button_yes" />

        <TableRow
            android:id="@+id/buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_dunno">

            <Button
                android:id="@+id/button_summary"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_summarise_test" />

            <Button
                android:id="@+id/button_add_question"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_add_question" />

        </TableRow>

        <TextView
            android:id="@+id/label_session_token"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttons"
            android:gravity="center"
            android:maxLines="1"
            android:paddingTop="6dp"
            android:text="@string/label_session_token"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/view_token"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_session_token"
            android:gravity="center"
            android:maxLines="1"
            android:minHeight="50sp"
            android:text="@string/zero_value"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button_yes"
            android:text="@string/button_no" />

        <Button
            android:id="@+id/button_dunno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_dunno"
            android:layout_below="@+id/button_no"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

</ScrollView>