<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/settingsToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName|textNoSuggestions"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/label_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_surname" />

            <EditText
                android:id="@+id/surname_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:ems="10"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName|textNoSuggestions"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/label_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_studentNo" />

            <EditText
                android:id="@+id/index_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:imeOptions="flagNoExtractUi|actionNext"
                android:inputType="phone"
                android:maxLength="6"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/label_subject_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_course_value" />

            <EditText
                android:id="@+id/viewMain_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:imeOptions="flagNoExtractUi"
                android:inputType="text|textNoSuggestions"
                android:selectAllOnFocus="true"
                android:singleLine="true" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>