<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?android:attr/actionBarSize"

    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TableRow
            android:id="@+id/row_index_labels"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/label_studentNo"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:text="@string/label_studentNo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/label_hall_row"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_hall_row"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/label_hall_seat"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/label_hall_seat"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="15sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_index"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_index_labels">

            <TextView
                android:id="@+id/viewMain_studentNo"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:maxLength="6"
                android:maxLines="1"
                android:minHeight="50dp"
                android:text="@string/zero_value"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editMain_hallRow"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:digits="-0123456789"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi|actionNext"
                android:inputType="phone"
                android:maxLength="2"
                android:maxLines="1"
                android:nextFocusForward="@+id/editMain_hallSeat"
                android:selectAllOnFocus="true"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editMain_hallSeat"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:digits="-0123456789"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi|actionNext"
                android:inputType="phone"
                android:maxLength="2"
                android:maxLines="1"
                android:nextFocusForward="@+id/editMain_vector"
                android:selectAllOnFocus="true"
                android:textSize="30sp" />

        </TableRow>

        <View
            android:id="@+id/index_number_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/row_index"
            android:layout_marginBottom="8sp"
            android:layout_marginTop="8sp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/label_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/index_number_line"
            android:text="@string/label_weight"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="17sp" />

        <TableRow
            android:id="@+id/row_weight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/label_weight">

            <EditText
                android:id="@+id/editMain_vector"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:digits="0123456789"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi|actionNext"
                android:inputType="phone"
                android:maxLength="6"
                android:maxLines="1"
                android:nextFocusForward="@+id/editMain_testID"
                android:selectAllOnFocus="true"
                android:textAlignment="gravity"
                android:textSize="30sp" />


            <Button
                android:id="@+id/buttonMain_scanQR"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:text="@string/button_qr_code" />


        </TableRow>

        <View
            android:id="@+id/weight_row_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/row_weight"
            android:layout_marginBottom="8sp"
            android:layout_marginTop="8sp"
            android:background="@android:color/darker_gray" />


        <TableRow
            android:id="@+id/row_result_labels"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/weight_row_line">

            <TextView
                android:id="@+id/label_result"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:text="@string/label_result"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/label_result_modulo"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/label_result_modulo"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

        </TableRow>


        <TableRow
            android:id="@+id/row_result"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_result_labels">

            <TextView
                android:id="@+id/viewMain_result"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:minHeight="50dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/editMain_moduloResult"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:maxLines="1"
                android:minHeight="50dp"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="30sp" />


        </TableRow>

        <View
            android:id="@+id/result_row_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/row_result"
            android:layout_marginBottom="8sp"
            android:layout_marginTop="8sp"
            android:background="@android:color/darker_gray" />

        <TableRow
            android:id="@+id/row_exam_info_labels"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/result_row_line">

            <TextView
                android:id="@+id/label_course_value"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:text="@string/label_course_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/label_exam_id_value"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/label_exam_id_value"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="17sp" />

        </TableRow>

        <TableRow
            android:id="@+id/row_exam_infos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_exam_info_labels">

            <TextView
                android:id="@+id/viewMain_course"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:maxLines="1"
                android:minHeight="50sp"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="30sp" />


            <com.twohe.morri.tools.InstantAutoComplete
                android:id="@+id/editMain_testID"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_"
                android:gravity="center"
                android:imeOptions="flagNoExtractUi|actionDone"
                android:inputType="text|textNoSuggestions"
                android:maxLines="1"
                android:minHeight="50sp"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textColor="@color/abc_primary_text_material_light"
                android:textSize="30sp" />


        </TableRow>


        <TableRow
            android:id="@+id/buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/row_exam_infos">

            <Button
                android:id="@+id/buttonMain_exitApp"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/button_exit" />

            <Button
                android:id="@+id/buttonMain_compute"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/button_compute" />

            <Button
                android:id="@+id/buttonMain_startTest"
                android:layout_width="0sp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:ems="10"
                android:text="@string/button_start_test" />

        </TableRow>

    </RelativeLayout>

</ScrollView>
